# hyperspot

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  NOTICE  deny.toml  dylint.toml  release-plz.toml
apps/hyperspot-server/: Cargo.toml
apps/hyperspot-server/src/: main.rs  registered_modules.rs
dylint_lints/: Cargo.toml
dylint_lints/de11_testing/de1101_tests_in_separate_files/: AGENTS.md  Cargo.toml  README.md  extract_tests.py
dylint_lints/de11_testing/de1101_tests_in_separate_files/src/: lib.rs
dylint_lints/de11_testing/de1101_tests_in_separate_files/ui/: dto_tests.rs  large_inline_test_block.rs  large_inline_test_block.stderr  naming_correct_case.rs  naming_path_correct.rs  naming_path_forbidden.stderr  naming_wrong_module.rs  naming_wrong_module.stderr  other_module_inline_case.rs  other_module_inline_case.stderr  resource_group_cfg_not_test.rs  resource_group_inline_case.rs  resource_group_inline_case.stderr  resource_group_out_of_line_test_module.rs  resource_group_out_of_line_test_module.stderr  resource_group_separate_test_file_tests.rs
examples/modkit/users-info/users-info/: Cargo.toml
examples/modkit/users-info/users-info-server/: Cargo.toml
examples/modkit/users-info/users-info-server/src/: main.rs  registered_modules.rs
examples/modkit/users-info/users-info/src/: lib.rs
examples/modkit/users-info/users-info/src/infra/: metrics.rs  metrics_tests.rs
libs/modkit/: Cargo.toml
libs/modkit-db/: Cargo.toml
libs/modkit-db/benches/: outbox_throughput.rs  worker_overhead.rs
libs/modkit-db/examples/: outbox_batch_multi_queue.rs  outbox_dead_letters.rs  outbox_retry_reject.rs  outbox_transactional.rs
libs/modkit-db/src/: db_provider.rs  deadlock.rs  lib.rs  options.rs
libs/modkit-db/src/outbox/: README.md  builder.rs  core.rs  dead_letter.rs  dialect.rs  handler.rs  integration_tests.rs  manager.rs  migrations.rs  mod.rs  prioritizer.rs  stats.rs  strategy.rs  types.rs  validation.rs
libs/modkit-db/src/outbox/taskward/: action.rs  bulkhead.rs  listener.rs  mod.rs  pacing.rs  poker.rs  showcase.rs  showcase_tests.rs  task.rs  task_set.rs
libs/modkit-db/src/outbox/workers/: mod.rs  processor.rs  reconciler.rs  sequencer.rs  vacuum.rs
libs/modkit-db/src/secure/: cond.rs  mod.rs  select.rs  tests.rs  tests_tests.rs
libs/modkit-db/tests/sqlite/: mod.rs  secure_select_project_all.rs
libs/modkit-errors/: Cargo.toml
libs/modkit-errors/src/: problem.rs
libs/modkit-macros-tests/: Cargo.toml
libs/modkit-macros-tests/tests/ui/fail/: expand_vars_unsupported_type.rs  expand_vars_unsupported_type.stderr
libs/modkit-macros-tests/tests/ui/pass/: expand_vars_no_marked_fields.rs  expand_vars_string_fields.rs
libs/modkit-utils/: Cargo.toml
libs/modkit-utils/src/: humantime_serde.rs  humantime_serde_tests.rs  lib.rs  naming.rs  var_expand.rs
libs/modkit/src/: config.rs  context.rs  lib.rs
libs/modkit/src/api/: error_layer.rs
libs/modkit/src/bootstrap/: oop.rs
libs/modkit/src/bootstrap/config/: mod.rs
libs/modkit/src/runtime/: host_runtime.rs
libs/system-sdks/: Cargo.toml
libs/system-sdks/sdks/directory/: Cargo.toml
modules/credstore/credstore/: Cargo.toml
modules/credstore/credstore-sdk/: Cargo.toml
modules/credstore/credstore-sdk/src/: error.rs  error_tests.rs  models.rs  models_tests.rs
modules/credstore/credstore/src/: config.rs  config_tests.rs
modules/credstore/credstore/src/domain/: error.rs  error_tests.rs  local_client.rs  local_client_tests.rs  service.rs  service_tests.rs
modules/credstore/plugins/static-credstore-plugin/: Cargo.toml  README.md
modules/credstore/plugins/static-credstore-plugin/src/: config.rs  config_tests.rs  module.rs
modules/credstore/plugins/static-credstore-plugin/src/domain/: client.rs  client_tests.rs  service.rs  service_tests.rs
modules/file-parser/: Cargo.toml
modules/file-parser/src/: module.rs
modules/file-parser/src/domain/: service.rs
modules/mini-chat/mini-chat/: Cargo.toml
modules/mini-chat/mini-chat-sdk/: Cargo.toml
modules/mini-chat/mini-chat-sdk/src/: audit_models.rs  error.rs  gts.rs  lib.rs  models.rs  plugin_api.rs
modules/mini-chat/mini-chat/src/: config.rs  module.rs
modules/mini-chat/mini-chat/src/api/rest/: dto.rs  error.rs
modules/mini-chat/mini-chat/src/domain/: citation_mapping.rs  error.rs  llm.rs  mime_validation.rs  mod.rs  models.rs  ports.rs  retrieval.rs  stream_events.rs
modules/mini-chat/mini-chat/src/domain/model/: finalization.rs  quota.rs
modules/mini-chat/mini-chat/src/domain/ports/: metric_labels.rs  metrics.rs  mod.rs
modules/mini-chat/mini-chat/src/domain/repos/: attachment_repo.rs  (+11 more)
modules/mini-chat/mini-chat/src/infra/: metrics.rs  metrics_tests.rs  mod.rs  oagw_provisioning.rs  outbox.rs
modules/mini-chat/plugins/static-audit-plugin/: Cargo.toml  README.md
modules/mini-chat/plugins/static-audit-plugin/src/: config.rs  lib.rs  module.rs
modules/mini-chat/plugins/static-model-policy-plugin/: Cargo.toml
modules/mini-chat/plugins/static-model-policy-plugin/src/: config.rs
modules/system/api-gateway/: Cargo.toml
modules/system/api-gateway/src/: config.rs  module.rs
modules/system/api-gateway/src/middleware/: access_log.rs  auth.rs  http_metrics.rs  mod.rs
modules/system/api-gateway/tests/: access_log_tests.rs  auth_middleware.rs  http_metrics_tests.rs
modules/system/authn-resolver/authn-resolver/: Cargo.toml
modules/system/authn-resolver/authn-resolver-sdk/: Cargo.toml  README.md
modules/system/authn-resolver/authn-resolver-sdk/src/: api.rs  error.rs  lib.rs  models.rs  plugin_api.rs
modules/system/authz-resolver/authz-resolver-sdk/: Cargo.toml
modules/system/authz-resolver/authz-resolver-sdk/src/: constraints.rs  constraints_tests.rs
modules/system/grpc-hub/: Cargo.toml
modules/system/module-orchestrator/: Cargo.toml
modules/system/nodes-registry/nodes-registry/: Cargo.toml
modules/system/nodes-registry/nodes-registry-sdk/: Cargo.toml
modules/system/oagw/oagw-sdk/: Cargo.toml
modules/system/oagw/oagw-sdk/src/: api.rs  models.rs
modules/system/oagw/oagw-sdk/tests/: usage.rs
(+337 files in other folders)
