[workspace.package]
version = "0.2.13"
edition = "2024"
license = "Apache-2.0"
authors = ["Cyber Fabric"]
repository = "https://github.com/cyberfabric/cyberfabric-core"
description = "HyperSpot Server"
rust-version = "1.92.0"
readme = "README.md"

[profile.dev]
incremental = false
codegen-units = 16

[profile.test]
incremental = false
codegen-units = 16

[profile.release]
codegen-units = 1

[workspace]
members = [
    "apps/hyperspot-server",
    "apps/gts-docs-validator",
    "libs/modkit",
    "libs/modkit-macros",
    "libs/modkit-macros-tests",
    "libs/modkit-db",
    "libs/modkit-db-macros",
    "libs/modkit-auth",
    "libs/modkit-http",
    "libs/modkit-sdk",
    "libs/modkit-odata-macros",
    "libs/modkit-security",
    "libs/modkit-errors",
    "libs/modkit-errors-macro",
    "libs/modkit-odata",
    "libs/modkit-node-info",
    "libs/modkit-transport-grpc",
    "libs/modkit-utils",
    "libs/system-sdks",
    "libs/system-sdks/sdks/directory",
    "modules/file-parser",
    "modules/system/api-gateway",
    "modules/system/grpc-hub",
    "modules/system/nodes-registry/nodes-registry",
    "modules/system/nodes-registry/nodes-registry-sdk",
    "modules/system/module-orchestrator",
    "examples/modkit/users-info/users-info-sdk",
    "examples/modkit/users-info/users-info",
    "examples/oop-modules/calculator-gateway/calculator-gateway-sdk",
    "examples/oop-modules/calculator-gateway/calculator-gateway",
    "examples/oop-modules/calculator/calculator-sdk",
    "examples/oop-modules/calculator/calculator",
    "modules/system/types-registry/types-registry-sdk",
    "modules/system/types-registry/types-registry",
    "modules/system/types-sdk",
    "modules/system/types",
    "modules/simple-user-settings/simple-user-settings-sdk",
    "modules/simple-user-settings/simple-user-settings",
    "modules/system/tenant-resolver/tenant-resolver-sdk",
    "modules/system/tenant-resolver/tenant-resolver",
    "modules/system/tenant-resolver/plugins/static-tr-plugin",
    "modules/system/tenant-resolver/plugins/single-tenant-tr-plugin",
    "modules/system/authn-resolver/authn-resolver-sdk",
    "modules/system/authn-resolver/authn-resolver",
    "modules/system/authn-resolver/plugins/static-authn-plugin",
    "modules/system/authz-resolver/authz-resolver-sdk",
    "modules/system/authz-resolver/authz-resolver",
    "modules/system/authz-resolver/plugins/static-authz-plugin",
    "modules/system/oagw/oagw",
    "modules/system/oagw/oagw-sdk",
]
exclude = ["fuzz"]
resolver = "3"

# Note: dylint_lints is a separate workspace for custom linters
# See dylint_lints/README.md for usage instructions

[workspace.lints.rust]
deprecated = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_mut = "warn"
noop_method_call = "warn"
unused_import_braces = "warn"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
# See clippy rules details https://rust-lang.github.io/rust-clippy/master/index.html
# Here will be workspace global rules
pedantic = { level = "deny", priority = -1 }
async_yields_async = "deny"
await_holding_lock = "deny"
await_holding_refcell_ref = "deny"
cast_possible_truncation = "deny"
cast_possible_wrap = "deny"
cast_precision_loss = "deny"
cast_sign_loss = "deny"
clone_on_copy = "deny"
cognitive_complexity = "deny"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
default_trait_access = "deny"
doc_link_with_quotes = "deny"
doc_markdown = "deny"
elidable_lifetime_names = "deny"
empty_line_after_outer_attr = "deny"
empty_structs_with_brackets = "deny"
enum_glob_use = "deny"
expect_used = "deny"
explicit_iter_loop = "deny"
float_cmp = "deny"
float_cmp_const = "deny"
format_push_string = "deny"
if_not_else = "deny"
ignore_without_reason = "deny"
ignored_unit_patterns = "deny"
implicit_clone = "deny"
items_after_statements = "deny"
implicit_hasher = "deny"
inefficient_to_string = "deny"
integer_division = "deny"
ip_constant = "deny"
let_underscore_must_use = "deny"
lossy_float_literal = "deny"
manual_assert = "deny"
manual_let_else = "deny"
manual_string_new = "deny"
many_single_char_names = "deny"
map_clone = "deny"
map_unwrap_or = "deny"
match_same_arms = "deny"
match_wildcard_for_single_variants = "deny"
missing_errors_doc = "deny"
missing_fields_in_debug = "deny"
missing_panics_doc = "deny"
must_use_candidate = "deny"
mutex_atomic = "deny"
needless_borrow = "deny"
needless_lifetimes = "deny"
needless_pass_by_value = "deny"
no_effect_underscore_binding = "deny"
non_ascii_literal = "deny"
non_std_lazy_statics = "deny"
option_as_ref_cloned = "deny"
redundant_closure_for_method_calls = "deny"
redundant_else = "deny"
ref_option = "deny"
regex_creation_in_loops = "deny"
return_self_not_must_use = "deny"
semicolon_if_nothing_returned = "deny"
single_char_pattern = "deny"
similar_names = "deny"
single_match_else = "deny"
struct_excessive_bools = "deny"
suspicious_operation_groupings = "deny"
too_many_lines = "deny"
trivially_copy_pass_by_ref = "deny"
type_complexity = "deny"
unchecked_time_subtraction = "deny"
unnecessary_debug_formatting = "deny"
uninlined_format_args = "deny"
unnecessary_literal_bound = "deny"
unnecessary_wraps = "deny"
unnested_or_patterns = "deny"
unreadable_literal = "deny"
unused_async = "deny"
unused_self = "deny"
unwrap_used = "deny"
use_debug = "deny"
used_underscore_binding = "deny"
used_underscore_items = "deny"
useless_let_if_seq = "deny"
wildcard_dependencies = "deny"
wildcard_imports = "deny"

# Additional lints for LLM-generated code quality
# Catches redundant/inefficient patterns
redundant_clone = "deny"
redundant_pattern_matching = "deny"
redundant_pub_crate = "deny"
str_to_string = "deny"
manual_ok_or = "deny"
manual_map = "deny"
manual_filter_map = "deny"
manual_find_map = "deny"

# Prevents verbose/non-idiomatic code
match_bool = "deny"
needless_for_each = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"

# Memory efficiency and correctness
large_stack_arrays = "deny"
large_types_passed_by_value = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
string_lit_as_bytes = "deny"
verbose_file_reads = "deny"

[workspace.dependencies]
# libs
modkit = { package = "cf-modkit", version = "0.2.13", path = "libs/modkit" }
modkit-http = { package = "cf-modkit-http", version = "0.2.13", path = "libs/modkit-http" }
modkit-auth = { package = "cf-modkit-auth", version = "0.2.13", path = "libs/modkit-auth" }
modkit-db = { package = "cf-modkit-db", version = "0.2.13", path = "libs/modkit-db" }
modkit-db-macros = { package = "cf-modkit-db-macros", version = "0.2.13", path = "libs/modkit-db-macros" }
modkit-errors = { package = "cf-modkit-errors", version = "0.2.13", path = "libs/modkit-errors" }
modkit-errors-macro = { package = "cf-modkit-errors-macro", version = "0.2.13", path = "libs/modkit-errors-macro" }
modkit-macros = { package = "cf-modkit-macros", version = "0.2.13", path = "libs/modkit-macros" }
modkit-node-info = { package = "cf-modkit-node-info", version = "0.2.13", path = "libs/modkit-node-info" }
modkit-odata = { package = "cf-modkit-odata", version = "0.2.13", path = "libs/modkit-odata" }
modkit-odata-macros = { package = "cf-modkit-odata-macros", version = "0.2.13", path = "libs/modkit-odata-macros" }
modkit-sdk = { package = "cf-modkit-sdk", version = "0.2.13", path = "libs/modkit-sdk" }
modkit-security = { package = "cf-modkit-security", version = "0.2.13", path = "libs/modkit-security" }
modkit-transport-grpc = { package = "cf-modkit-transport-grpc", version = "0.2.13", path = "libs/modkit-transport-grpc" }
modkit-utils = { package = "cf-modkit-utils", version = "0.2.13", path = "libs/modkit-utils" }

cf-system-sdks = { version = "0.1.14", path = "libs/system-sdks" }
cf-system-sdk-directory = { version = "0.1.14", path = "libs/system-sdks/sdks/directory" }

# system modules SDKs
types-registry-sdk = { package = "cf-types-registry-sdk", version = "0.1.3", path = "modules/system/types-registry/types-registry-sdk" }
tenant-resolver-sdk = { package = "cf-tenant-resolver-sdk", version = "0.1.5", path = "modules/system/tenant-resolver/tenant-resolver-sdk" }

# system modules
grpc_hub = { package = "cf-grpc-hub", version = "0.1.4", path = "modules/system/grpc-hub" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.16"
secrecy = { version = "0.10", features = ["serde"] }
serde_urlencoded = "0.7"
schemars = { version = "0.8", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async runtime
tokio = { version = "1.47", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = { version = "0.1", features = ["sync", "net"] }
futures = "0.3"
async-trait = "0.1"

# High-performance data structures
dashmap = "6.1"
arc-swap = "1.7"

# Security
zeroize = { version = "1", features = ["derive"] }
aliri_tokens = { version = "0.3", default-features = false, features = ["rand"] }
aliri_clock = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "json",
    "time",
    "local-time",
] }
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-error = "0.2"
tracing-appender = "0.2"
tracing-test = "0.2"
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.31", features = [
    "grpc-tonic",
    "http-proto",
] }

# Web framework (only for api-gateway)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "request-id",
    "cors",
    "limit",
    "util",
    "timeout",
    "decompression-gzip",
    "decompression-br",
    "decompression-deflate",
    "follow-redirect",
] }
uuid = { version = "1.19", features = ["serde"] }
governor = "0.10"

# OpenAPI documentation (only for api-gateway)
utoipa = { version = "5.4", features = [
    "macros",
    "openapi_extensions",
    "chrono",
    "uuid",
] }

# HTTP stack dependencies
hyper = "1.5"
hyper-util = "0.1"
hyper-rustls = { version = "0.27", default-features = false, features = ["aws-lc-rs"] }
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs", "std", "tls12"] }
rustls-native-certs = "0.8"
rustls-pki-types = "1"
http-body-util = "0.1"
http-body = "1"

# HTTP client helpers
rand = "0.9"

# Synchronous locks for better performance
parking_lot = "0.12"

# CLI support
clap = { version = "4.5", features = ["derive"] }

# Database utilities
sea-orm = { version = "1.1", default-features = false, features = [
    "runtime-tokio-rustls",
    "with-uuid",
    "with-chrono",
    "with-rust_decimal",
    "macros",
] }
sea-orm-migration = { version = "1.1", default-features = false, features = [
    "runtime-tokio",
] }
# sqlx TLS: use aws-lc-rs provider only (not ring) to avoid crypto provider conflicts
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls-aws-lc-rs"] }

xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File rotation for logging
file-rotate = "0.8"

# Time handling
chrono = { version = "0.4", default-features = false, features = ["serde"] }

# DSN parsing
dsn = "1.1.1"
humantime = "2.3.0"

# URL parsing
url = "2.5"
urlencoding = "2.1"

# Regex for env expansion
regex = "1.10"

# CLI and terminal output
glob = "0.3"
colored = "3.1"
supports-color = "3"
enable-ansi-support = "0.2"

# gRPC support
tonic = { version = "0.14", features = ["transport"] }
prost = { version = "0.14" }
tonic-prost = "0.14"

# Protocol buffer compilation (build dependencies)
prost-build = "0.14"
tonic-prost-build = "0.14"

# Blocking HTTP client (for build scripts)
ureq = "2.12"

# Time handling
time = { version = "0.3.47", features = ["serde", "formatting", "parsing"] }

# Cryptographic utilities
sha2 = "0.10"
hex = "0.4"

# JWT and authentication
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }

# Configuration management
figment = { version = "0.10", features = ["yaml", "env"] }
inventory = "0.3"

# File system utilities
tempfile = "3"
dirs = "6"

# Decimal handling
bigdecimal = "0.4"
rust_decimal = { version = "1.39", features = ["serde"] }
ryu = "1.0"

# System information
sysinfo = "0.38"
hostname = "0.4"
starship-battery = "0.10"
local-ip-address = "0.6"
machine-uid = "0.5"
nvml-wrapper = "0.11"

# Text processing
base64 = "0.22"
postcard = { version = "1.1", features = ["alloc"] }
strsim = "0.11"

# OData support
odata-params = "0.4"

# Procedural macros
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = [
    "full",
    "parsing",
    "printing",
    "derive",
    "extra-traits",
] }
heck = "0.5"
proc-macro-error2 = "2.0"

# Testing utilities
trybuild = "1"
testcontainers = { version = "0.26", default-features = false, features = ["aws-lc-rs"] }
testcontainers-modules = { version = "0.14", default-features = false, features = ["postgres", "mysql"] }
httpmock = "0.8"
flate2 = "1"

# Async utilities
futures-core = "0.3"
futures-util = "0.3"
pin-project-lite = "0.2"

# HTTP types and web utilities
http = "1.3"
httpdate = "1"
matchit = "0.9"

# Document and file handling
rust-embed = "8"
bytes = "1.11"
mime = "0.3"

# Document parsing libraries
tl = "0.7"
pdf-extract = "0.10"
docx-rust = "0.1.11"
calamine = "0.32"
pptx-to-md = "0.4"

# Additional testing utilities
tokio-test = "0.4"
temp-env = "0.3"

# Additional utilities
nanoid = "0.4"

# GTS dependencies
jsonschema = "0.40"
walkdir = "2.5"
shellexpand = "3.1"

# GTS library
gts = "0.7.8"
gts-macros = "0.7.8"
