# Updated: 2026-04-07 by Constructor Tech
# Updated: 2026-03-13 by Constructor Tech
[workspace]
members = [
    "lint_utils",
    "de01_contract_layer/de0101_no_serde_in_contract",
    "de01_contract_layer/de0102_no_toschema_in_contract",
    "de01_contract_layer/de0103_no_http_types_in_contract",
    "de01_contract_layer/de0104_no_api_dto_in_contract",
    "de01_contract_layer/de0110_no_schema_for_on_gts_structs",
    "de02_api_layer/de0201_dtos_only_in_api_rest",
    "de02_api_layer/de0202_dtos_not_referenced_outside_api",
    "de02_api_layer/de0203_dtos_must_use_api_dto",
    "de02_api_layer/de0204_dtos_must_have_toschema_derive",
    "de02_api_layer/de0205_operation_builder",
    "de03_domain_layer/de0301_no_infra_in_domain",
    "de03_domain_layer/de0308_no_http_in_domain",
    "de05_client_layer/de0503_plugin_client_suffix",
    "de07_security/de0706_no_direct_sqlx",
    "de08_rest_api_conventions/de0801_api_endpoint_version",
    "de08_rest_api_conventions/de0802_use_odata_ext",
    "de08_rest_api_conventions/de0803_api_snake_case",
    "de09_gts_layer/de0901_gts_string_pattern",
    "de09_gts_layer/de0902_no_schema_for_on_gts_structs",
    "de03_domain_layer/de0309_must_have_domain_model",
    "de05_client_layer/de0504_client_versioning",
    "de07_security/de0707_drop_zeroize",
    "de13_common_patterns/de1301_no_print_macros",
    # "de13_common_patterns/de1302_error_from_to_string",
    "de13_common_patterns/de1303_no_primitive_type_alias",
    "de11_testing/de1101_tests_in_separate_files",
]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
authors = ["Cyber Fabric"]

# This workspace contains dylint linter crates for Cyber Fabric architecture enforcement
#
# Current linters:
# - DE0101-DE0104: Contract layer validation (serde, toschema, http types, api_dto)
# - DE0201-DE0204: API layer validation (DTOs location, references, derives)
# - DE0503-DE0504: Client layer validation (naming conventions, versioning)
# - DE0801-DE0803: REST API conventions (endpoints, odata, snake_case)
# - DE0901-DE0902: GTS layer validation (string patterns, schema_for)

[workspace.lints.rust]
unsafe_code = "forbid"
unused_extern_crates = "warn"

[workspace.dependencies]
clippy_utils = { git = "https://github.com/rust-lang/rust-clippy", rev = "20ce69b9a63bcd2756cd906fe0964d1e901e042a" }
dylint_linting = "=5.0.0"
dylint_testing = "=5.0.0"
lint_utils = { path = "lint_utils" }
tokio = { version = "1.44", features = ["macros", "rt"] }
# NOTE: Keep gts version in sync with /Cargo.toml workspace dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
utoipa = "5.2"
modkit-macros = { package = "cf-modkit-macros", path = "../libs/modkit-macros" }
modkit = { package = "cf-modkit", path = "../libs/modkit" }
gts-id = "0.8.4"
gts = "0.8.4"
gts-macros = "0.8.4"
schemars = { version = "1.2", features = ["derive"] }

# Dev dependencies for lint tests
sea-orm = "1.0"
sqlx = "0.8"
axum = "0.7"
uuid = "1.0"
anyhow = "1.0"
thiserror = "2.0"
http = "1.0"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
