[package]
name = "hyperspot-server"
version = "0.6.1"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[features]
default = []
# FIPS-140-3: use the AWS-LC FIPS-validated crypto module for all cryptographic operations
fips = ["modkit/fips", "modkit-http/fips", "api_egress/fips"]

db-mysql = ["modkit-db/mysql", "users-info?/db-mysql"]

users-info-example = ["dep:users-info"]
oop-example = ["dep:calculator-gateway", "dep:calculator"]
single-tenant = ["dep:single-tenant-tr-plugin"]
static-tenants = ["dep:static-tr-plugin"]
static-authn = ["dep:static-authn-plugin"]
static-authz = ["dep:static-authz-plugin"]
static-credstore = ["dep:static-credstore-plugin"]
mini-chat = ["dep:mini-chat"]
k8s = ["mini-chat/k8s"]
otel = ["modkit/otel"]

[dependencies]
mimalloc = { version = "0.1" }
# Local crates
modkit = { workspace = true, features = ["bootstrap"] }
modkit-http = { workspace = true }
modkit-db = { workspace = true }

# System modules
api_gateway = { package = "cf-api-gateway", path = "../../modules/system/api-gateway" }
api_egress = { package = "cf-oagw", path = "../../modules/system/oagw/oagw" }
grpc_hub = { package = "cf-grpc-hub", path = "../../modules/system/grpc-hub" }
module_orchestrator = { package = "cf-module-orchestrator", path = "../../modules/system/module-orchestrator" }
types = { path = "../../modules/system/types" }
types_registry = { package = "cf-types-registry", path = "../../modules/system/types-registry/types-registry" }
tenant-resolver = { package = "cf-tenant-resolver", path = "../../modules/system/tenant-resolver/tenant-resolver" }
authn-resolver = { package = "cf-authn-resolver", path = "../../modules/system/authn-resolver/authn-resolver" }
authz-resolver = { package = "cf-authz-resolver", path = "../../modules/system/authz-resolver/authz-resolver" }

# Optional tenant resolver plugins
single-tenant-tr-plugin = { package = "cf-single-tenant-tr-plugin", path = "../../modules/system/tenant-resolver/plugins/single-tenant-tr-plugin", optional = true }
static-tr-plugin = { package = "cf-static-tr-plugin", path = "../../modules/system/tenant-resolver/plugins/static-tr-plugin", optional = true }

# Optional authn/authz plugins
static-authn-plugin = { package = "cf-static-authn-plugin", path = "../../modules/system/authn-resolver/plugins/static-authn-plugin", optional = true }
static-authz-plugin = { package = "cf-static-authz-plugin", path = "../../modules/system/authz-resolver/plugins/static-authz-plugin", optional = true }

# Optional credstore plugins
static-credstore-plugin = { package = "cf-static-credstore-plugin", path = "../../modules/credstore/plugins/static-credstore-plugin", optional = true }

# user modules
file_parser = { package = "cf-file-parser", path = "../../modules/file-parser" }
nodes_registry = { package = "cf-nodes-registry", path = "../../modules/system/nodes-registry/nodes-registry" }
simple_user_settings = { package = "cf-simple-user-settings", path = "../../modules/simple-user-settings/simple-user-settings" }
credstore = { package = "cf-credstore", path = "../../modules/credstore/credstore" }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
clap = { workspace = true }

# Optional mini-chat module
mini-chat = { package = "cf-mini-chat", path = "../../modules/mini-chat/mini-chat", optional = true }

# Optional example module
users-info = { path = "../../examples/modkit/users-info/users-info", optional = true }
calculator-gateway = { path = "../../examples/oop-modules/calculator-gateway/calculator-gateway", optional = true }
calculator = { path = "../../examples/oop-modules/calculator/calculator", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serde-saphyr = { workspace = true }
serde_json = { workspace = true }
