[package]
name = "cf-modkit-errors"
version = "0.6.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit errors library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["web-programming"]

[lib]
name = "modkit_errors"

[lints]
workspace = true

[features]
default = []
utoipa = ["dep:utoipa"]
axum = ["dep:axum", "dep:tracing"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
http = { workspace = true }
