[package]
name = "cf-system-sdks"
version = "0.1.14"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Collection of system modules SDKs"
readme = "README.md"
rust-version.workspace = true
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["development-tools"]

[lib]
name = "cf_system_sdks"

[lints]
workspace = true

[features]
directory = ["dep:cf-system-sdk-directory"]
directory_grpc = ["directory", "cf-system-sdk-directory?/grpc"]


[dependencies]
cf-system-sdk-directory = { workspace = true, optional = true }

