[package]
name = "cf-file-parser"
version = "0.1.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "File Parser module"
repository.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["parsing"]

[lib]
name = "file_parser"

[lints]
workspace = true

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }

# Serde and JSON schema
serde = { workspace = true }
utoipa = { workspace = true, features = ["time"] }

# HTTP and REST
axum = { workspace = true, features = ["macros", "multipart"] }
http = { workspace = true }

# Time handling
time = { workspace = true }

# UUID support
uuid = { workspace = true }


# Error handling
thiserror = { workspace = true }

# Bytes handling
bytes = { workspace = true }

# Futures and async streaming
futures-util = { workspace = true }

# Base64 encoding (used by stub parser)
base64 = { workspace = true }

# Temp file handling
tempfile = { workspace = true }

# Document parsing libraries
tl = { workspace = true }
pdf-extract = { workspace = true }
calamine = { workspace = true }
pptx-to-md = { workspace = true }

# MIME type parsing
mime = { workspace = true }

docx-rust = { workspace = true }

# Local dependencies
modkit = { workspace = true }
modkit-security = { workspace = true }
modkit-macros = { workspace = true }
