[package]
name = "cf-credstore"
description = "credstore gateway module"
version = "0.1.8"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-system"]
categories = ["security"]

[lib]
name = "credstore"

[lints]
workspace = true

[dependencies]
credstore-sdk = { workspace = true }
types-registry-sdk = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
inventory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }

modkit = { workspace = true }
modkit-security = { workspace = true }
modkit-macros = { workspace = true }
