[package]
name = "cf-mini-chat-sdk"
description = "SDK for mini-chat: policy plugin traits, models, and errors"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modules"]
categories = ["artificial-intelligence"]


[lib]
name = "mini_chat_sdk"

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
gts = { workspace = true }
gts-macros = { workspace = true }
modkit = { workspace = true }
